src/styles/Exercises/UnitCircleExercise.scss
.circle-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  //margin: 25% 10% 15%;
  //width: calc(550px + 1vw);
  margin-bottom: 2%;
  margin-left: 25%;
  margin-top: 5%;
  position: relative;
  width: 400px;
}

.circle {
  position: relative;
  width: 70%;
}

.turtle {
  bottom: calc(0.15 * 100%);
  left: calc(0.46 * 100%);
  position: absolute;
  // width: 10%;
}

.circle-exercise {
  font-family: Quattrocento Sans, sans-serif;
  font-size: 4vh;
  font-style: italic;
  font-weight: bold;
  position: absolute;
}

.circle-label {
  font-family: Quattrocento Sans, sans-serif;
  font-size: 3vh;
  font-weight: bold;
  position: absolute;
}

.circle-cursor {
  position: absolute;
}

.circle-cursor-big {
  transform: scale(2);
}

